--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
-ELASTIC_URL=http://elasticsearch:9200
-REDIS_URL=redis://redis:6379/0
-APP_ENV=development
+# Project
+PROJECT_NAME="Async Cinema API"
+VERSION="1.0.0"
+
+# Elasticsearch
+ELASTIC_HOST=elasticsearch
+ELASTIC_PORT=9200
+
+# Redis
+REDIS_HOST=redis
+REDIS_PORT=6379
+
+# API
+API_V1_STR=/api/v1
