--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,38 +2,36 @@ name: CI
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main ]
   pull_request:
-    branches: [ main, develop ]
+    branches: [ main ]
 
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: [3.11]
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
-      - name: Cache pip
-        uses: actions/cache@v4
-        with:
-          path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
+          python-version: '3.11'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
-      - name: Run linters (isort, black check, flake8)
+          pip install flake8 black isort
+
+      - name: Run Flake8
         run: |
-          pip install black==23.12.0 isort flake8
-          isort --profile black --check-only src tests || true
-          black --check src tests || true
-          flake8 src tests || true
-      - name: Run tests
+          flake8 .
+
+      - name: Check Black formatting
         run: |
-          pip install pytest
-          pytest -q
+          black --check .
+
+      - name: Check import order with isort
+        run: |
+          isort . --check-only
