--- a/.gitignore
+++ b/.gitignore
@@ -1,65 +1,20 @@
 # Byte-compiled / optimized
 __pycache__/
-*.py[cod]
-*$py.class
+.pytest_cache/
+*/__pycache__/
 
 # Virtualenvs
-.venv/
 venv/
-env/
-ENV/
-
-# Pipenv
-Pipfile.lock
-
-# Poetry
-.poetry/
-
-# pyenv
-.python-version
-
-# Distribution / packaging
-build/
-dist/
-*.egg-info/
-.eggs/
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-.pytest_cache/
-
-# mypy
-.mypy_cache/
 
 # IDEs
 .vscode/
 .idea/
-*.sublime-project
-*.sublime-workspace
 
 # Docker
 *.env
 .env
 docker-compose.override.yml
-# optionally ignore docker images and volumes metadata
-**/docker-compose/local.override.yml
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Logs
-logs/
-*.log
-
-# Secrets
-secrets.*
+collect.py
+collect/
+.coverage
