--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,31 +9,41 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
     strategy:
       matrix:
-        python-version: [3.11]
+        python-version: [ "3.11" ]
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Python
-        uses: actions/setup-python@v4
+        uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python-version }}
+
       - name: Cache pip
         uses: actions/cache@v4
         with:
           path: ~/.cache/pip
-          key: ${{ runner.os }}-pip-${{ hashFiles('**/requirements.txt') }}
-      - name: Install dependencies
+          key: |
+            ${{ runner.os }}-pip-${{ matrix.python-version }}-${{ hashFiles('**/requirements.txt', '**/requirements-dev.txt') }}
+          restore-keys: |
+            ${{ runner.os }}-pip-${{ matrix.python-version }}-
+
+      - name: Install dependencies (runtime + dev)
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install -r requirements-dev.txt
+
       - name: Run linters (isort, black check, flake8)
         run: |
-          pip install black==23.12.0 isort flake8
+          # версии можно зафиксировать, либо использовать уже стоящие из dev-reqs
           isort --profile black --check-only src tests || true
           black --check src tests || true
           flake8 src tests || true
+
       - name: Run tests
         run: |
-          pip install pytest
-          pytest -q
+          pytest -q --maxfail=1 --disable-warnings
