--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,6 @@ ELASTIC_URL=http://elasticsearch:9200
 REDIS_URL=redis://redis:6379/0
 APP_ENV=development
 PROJECT_NAME=movies
+NGINX_PORT=80
+API_PORT=8000
+ES_INDEX=movies
