--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+# docker-compose.yml
 services:
   api:
     build: .
@@ -6,13 +7,28 @@ services:
       - ELASTIC_URL=http://elasticsearch:9200
       - REDIS_URL=redis://redis:6379/0
       - PROJECT_NAME=movies
+      - PORT=${API_PORT:-8000}
+      - GUNICORN_WORKERS=2
+      - GUNICORN_THREADS=1
     depends_on:
       elasticsearch:
         condition: service_healthy
       redis:
         condition: service_started
-    ports:
-      - "8000:8000"
+    restart: always
+    expose:
+      - "${API_PORT:-8000}"
+
+  nginx:
+    image: nginx:1.27-alpine
+    container_name: nginx
+    depends_on:
+      - api
+    ports:  
+      - "${NGINX_PORT:-80}:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/conf.d:/etc/nginx/conf.d:ro
     restart: always
 
   elasticsearch:
@@ -22,8 +38,8 @@ services:
       - discovery.type=single-node
       - xpack.security.enabled=false
       - ES_JAVA_OPTS=-Xms512m -Xmx512m
-    ports:
-      - "9200:9200"
+    expose:
+      - "9200"
     healthcheck:
       test: ["CMD-SHELL", "curl -s http://localhost:9200 >/dev/null || exit 1"]
       interval: 10s
@@ -35,6 +51,6 @@ services:
     image: redis:7.2-alpine
     container_name: redis
     command: ["redis-server", "--appendonly", "yes"]
-    ports:
-      - "6379:6379"
+    expose:
+      - "6379"
     restart: always
