--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,51 @@ ELASTIC_URL=http://elasticsearch:9200
 REDIS_URL=redis://redis:6379/0
 APP_ENV=development
 PROJECT_NAME=movies
+
+# Network / Ports
 NGINX_PORT=80
 API_PORT=8000
+
+# Elasticsearch index
 ES_INDEX=movies
+
+# Logging
+LOG_LEVEL=INFO
+
+# Gunicorn
+GUNICORN_WORKERS=2
+GUNICORN_THREADS=1
+GUNICORN_MAX_REQUESTS=1000
+GUNICORN_MAX_REQUESTS_JITTER=100
+GUNICORN_TIMEOUT=120
+GUNICORN_GRACEFUL_TIMEOUT=30
+GUNICORN_KEEPALIVE=5
+# GUNICORN_ACCESSLOG and GUNICORN_ERRORLOG default to "-" (stdout/stderr)
+# GUNICORN_ACCESSLOG=-
+# GUNICORN_ERRORLOG=-
+
+# OpenAPI / Docs
+DOCS_URL=/api/openapi
+OPENAPI_URL=/api/openapi.json
+
+# CORS / Proxy
+CORS_ALLOW_ORIGINS=*
+PROXY_TRUSTED_HOSTS=*
+
+# Pagination
+PAGE_SIZE_DEFAULT=50
+PAGE_SIZE_MAX=1000
+
+# Cache TTLs
+FILM_CACHE_TTL=300
+
+# ES loader
+ES_WAIT_TIMEOUT=60
+ES_MAPPING_PATH=data/movies.mapping.json
+ES_BULK_PATH=data/movies.bulk.ndjson
+
+# ES JVM heap (compose -> ES_JAVA_OPTS)
+ES_JVM_HEAP=512m
+
+# Redis AOF
+REDIS_AOF=yes
