--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,34 @@ services:
     build: .
     container_name: async-cinema-api
     environment:
-      - ELASTIC_URL=http://elasticsearch:9200
-      - REDIS_URL=redis://redis:6379/0
-      - PROJECT_NAME=movies
+      - ELASTIC_URL=${ELASTIC_URL:-http://elasticsearch:9200}
+      - REDIS_URL=${REDIS_URL:-redis://redis:6379/0}
+      - PROJECT_NAME=${PROJECT_NAME:-movies}
       - PORT=${API_PORT:-8000}
-      - GUNICORN_WORKERS=2
-      - GUNICORN_THREADS=1
+      - ES_INDEX=${ES_INDEX:-movies}
+      - LOG_LEVEL=${LOG_LEVEL:-INFO}
+      # Gunicorn tunables
+      - GUNICORN_WORKERS=${GUNICORN_WORKERS:-2}
+      - GUNICORN_THREADS=${GUNICORN_THREADS:-1}
+      - GUNICORN_MAX_REQUESTS=${GUNICORN_MAX_REQUESTS:-1000}
+      - GUNICORN_MAX_REQUESTS_JITTER=${GUNICORN_MAX_REQUESTS_JITTER:-100}
+      - GUNICORN_TIMEOUT=${GUNICORN_TIMEOUT:-120}
+      - GUNICORN_GRACEFUL_TIMEOUT=${GUNICORN_GRACEFUL_TIMEOUT:-30}
+      - GUNICORN_KEEPALIVE=${GUNICORN_KEEPALIVE:-5}
+      # Docs / OpenAPI
+      - DOCS_URL=${DOCS_URL:-/api/openapi}
+      - OPENAPI_URL=${OPENAPI_URL:-/api/openapi.json}
+      # CORS / Proxy
+      - CORS_ALLOW_ORIGINS=${CORS_ALLOW_ORIGINS:-*}
+      - PROXY_TRUSTED_HOSTS=${PROXY_TRUSTED_HOSTS:-*}
+      # Pagination / Cache
+      - PAGE_SIZE_DEFAULT=${PAGE_SIZE_DEFAULT:-50}
+      - PAGE_SIZE_MAX=${PAGE_SIZE_MAX:-1000}
+      - FILM_CACHE_TTL=${FILM_CACHE_TTL:-300}
+      # ES loader
+      - ES_WAIT_TIMEOUT=${ES_WAIT_TIMEOUT:-60}
+      - ES_MAPPING_PATH=${ES_MAPPING_PATH:-data/movies.mapping.json}
+      - ES_BULK_PATH=${ES_BULK_PATH:-data/movies.bulk.ndjson}
     depends_on:
       elasticsearch:
         condition: service_healthy
@@ -24,7 +46,7 @@ services:
     container_name: nginx
     depends_on:
       - api
-    ports:  
+    ports:
       - "${NGINX_PORT:-80}:80"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
@@ -37,7 +59,7 @@ services:
     environment:
       - discovery.type=single-node
       - xpack.security.enabled=false
-      - ES_JAVA_OPTS=-Xms512m -Xmx512m
+      - ES_JAVA_OPTS=-Xms${ES_JVM_HEAP:-512m} -Xmx${ES_JVM_HEAP:-512m}
     expose:
       - "9200"
     healthcheck:
@@ -50,7 +72,9 @@ services:
   redis:
     image: redis:7.2-alpine
     container_name: redis
-    command: ["redis-server", "--appendonly", "yes"]
+    environment:
+      - REDIS_AOF=${REDIS_AOF:-yes}
+    command: ["sh","-c","exec redis-server --appendonly ${REDIS_AOF:-yes}"]
     expose:
       - "6379"
     restart: always
